# Yocto-api

./: .gitignore  Cargo.toml
src/: main.rs  routes.rs
src/handlers/: ai.rs  email.rs  hubspot.rs  investors.rs  mod.rs  send_email.rs  survey.rs
src/handlers/search_investor/: investors_handler.rs  mod.rs
src/handlers/send_email/: mod.rs  oauth_handler.rs  survey_handler.rs
src/handlers/send_form/: mod.rs  send_form_handler.rs
src/models/: auth_query.rs  form_data.rs  investor_info.rs  mod.rs  searchParams.rs  survey.rs
src/services/: mod.rs
src/services/search_investor/: ai_service.rs  hubspot_service.rs  mod.rs
src/services/send_email/: email_service.rs  email_test_service.rs  mod.rs  oauth_callback_service.rs  oauth_service.rs  survey_service.rs
src/services/send_form/: mod.rs  send_form_service.rs
tests/: send_form_test.rs
